# catastrophe-exposure-aggregator

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-infrastructure.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/core/: config.py  redis.py
backend/src/app/routers/: health.py
backend/tests/: test_health.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: health.spec.ts
frontend/src/: App.tsx
frontend/src/pages/: HealthPage.tsx  HomePage.tsx
frontend/src/test/: HealthPage.test.tsx
infrastructure/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  deploy-policy.json  requirements.txt
infrastructure/stacks/: backend_stack.py  cache_stack.py  database_stack.py  frontend_stack.py  networking_stack.py
