[project]
name = "catastrophe-exposure-aggregator"
version = "0.1.0"
description = "Backend for catastrophe exposure aggregation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.46.0",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "pydantic-extra-types>=2.11.0",
    "sentry-sdk>=2.58.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.27",
    "email-validator>=2.3.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
